# trivialscan

./: .autoenv.zsh  .autoenv_leave.zsh  .dockerignore  .env  .env-example  .gitignore  .gitlab-ci.sh  .gitlab-ci.yml  .in  .out  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .trivialscan-config.yaml  COMPROMISED-CERTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  dev-requirements.txt  pypi-page.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  trivialscan.code-workspace
.certs/: burp-ca-1.crt  burp-ca-2.crt  charles-proxy.crt  dump-cert.py  preact-cli.crt  webpack-dev-server.crt
.development/: .trivialscan-config.yaml  badssl.com-client.p12  badssl.com-client.pem  targets-tafe.txt  targets.txt
docs/: 0.index.md  1.getting-started.md  2.cli.md  3.common-uses.md  4.classes.md  5.methods.md  6.errors.md  COMPROMISED-CERTS.md  CONTRIBUTING.md  RATIONALE.md  z.change-log.md
examples/: aws.amazon.com-full.out  aws.amazon.com-summary.out  aws.amazon.com.json
rust-query-crlite/: Cargo.toml
rust-query-crlite/src/: main.rs
src/: cli.py  main.py  test_exceptions.py  test_metadata.py  test_tlsverify.py  test_transport.py  test_trivialscan.py  tlsverify.py
src/tlsverify/: __init__.py  cli.py  constants.py  exceptions.py  fips.py  metadata.py  nist.py  pci.py  transport.py  util.py  validator.py
src/tlsverify/exceptions/: __init__.py
src/tlsverify/util/: __init__.py
src/trivialscan/: __init__.py  certificate.py  cli.py  config.py  config_internal.yaml  constants.py  exceptions.py  fips.py  metadata.py  models.py  nist.py  pci.py  scores.py  transport.py  util.py  validator.py
src/trivialscan/cli/: __init__.py  __main__.py  auth.py  config.py  credentials.py  generate.py  info.py  outputs.py  register.py  scan.py  upload.py
src/trivialscan/config/: __init__.py  base.yaml  evaluations.yaml  mitre_attack.yaml  pci_dss_3.2.1.yaml  pci_dss_4.0.yaml
src/trivialscan/evaluations/: README.md  __init__.py
src/trivialscan/evaluations/certificate/: caa_present.py  caa_present.yaml  caa_valid.py  caa_valid.yaml  dnssec.py  (+98 more)
src/trivialscan/outputs/: __init__.py  checkpoint.py  json.py
src/trivialscan/transport/: __init__.py  insecure.py  state.py
(+108 files in other folders)
